@@ -697,4 +697,7 @@ SLANG2.2.3 {
 		SLang_push_strlen_type;
 		SLang_pop_strlen_type;
 		SLadd_lconstant_table;
+		SLtt_tgetent;
+		SLtt_tgoto;
+		SLtt_tputs;
 } SLANG2.2.1;
